# miri_bg_subtract

./: .gitignore  MIRI_MRS_reduction_SPT0418-47_PAH_ch3long.ipynb  README.md  funcs.py  pyproject.toml  subtraction.py  tests.py
miri_notebook/: JWPipeNB-MIRI-MRS.ipynb  MIRI_MRS_reduction_SPT0418-47_PAH_ch3long.ipynb  spectroscopy.ipynb
misc/: tests.py
