[project]
name = "g165"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.0.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "photutils>=2.2.0",
    "pyqt5>=5.15.11",
    "stpsf>=2.0.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
